--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+    <img 
+    src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    alt="Lion yawns as he lounges">
+    <img 
+    src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    alt="Lion yawns as he lounges"
+    title="Yawning Lion">
   </body>
 </html>
